# wayvr

./: Cargo.toml  README.md
.github/: FUNDING.yml
.github/workflows/: build-appimage.yml
dash-frontend/: Cargo.toml
dash-frontend/assets/gui/: dashboard.xml  t_group_box.xml  t_loading.xml
dash-frontend/assets/gui/tab/: monado.xml  monado_tab_debug_timings.xml  monado_tab_general_settings.xml  monado_tab_process_list.xml  settings.xml
dash-frontend/assets/gui/view/: audio_settings.xml  dialog_box.xml  download_file.xml  download_skymaps.xml  popup_window.xml  remote_skymap_downloader.xml  remote_skymap_list.xml  skymap_list.xml  skymap_list_cell.xml
dash-frontend/assets/lang/: de.json  en.json  es.json  it.json  ja.json  pl.json  zh_CN.json
dash-frontend/src/: frontend.rs
dash-frontend/src/tab/: apps.rs  games.rs  home.rs  monado.rs  settings.rs
dash-frontend/src/tab/settings/: macros.rs  mod.rs  tab_autostart_apps.rs  tab_controls.rs  tab_features.rs  tab_look_and_feel.rs  tab_misc.rs  tab_skybox.rs  tab_troubleshooting.rs
dash-frontend/src/util/: cached_fetcher.rs  http_client.rs  mod.rs  popup_manager.rs  steam_utils.rs  toast_manager.rs  wgui_simple.rs
dash-frontend/src/util/networking/: http_client.rs  image_fetch.rs  mod.rs  skymap_catalog.rs
dash-frontend/src/views/: app_launcher.rs  audio_settings.rs  dialog_box.rs  download_file.rs  download_skymaps.rs  game_cover.rs  game_launcher.rs  game_list.rs  mod.rs  remote_skymap_downloader.rs  remote_skymap_list.rs  running_games_list.rs  skymap_list.rs  skymap_list_cell.rs
scripts/: test-focus.sh  wayvr-hypr-focus.sh  wayvr-hypr-helper-local.sh  wayvr-hypr-helper.sh  wayvr-hypr-local.sh  wayvr-hypr-screen-toggle.sh
scripts/prost_build/: Cargo.toml
scripts/prost_build/src/: main.rs  monado_metrics.proto
uidev/src/: main.rs
uidev/src/testbed/: testbed_any.rs  testbed_dashboard.rs  testbed_generic.rs
wayvr/: Cargo.toml
wayvr-ipc/: README.md
wayvr-ipc/src/: client.rs  packet_client.rs
wayvr-ipc/src/util/: handle.rs
wayvr/src/: config.rs  main.rs  state.rs
wayvr/src/assets/gui/: keyboard.xml
wayvr/src/assets/lang/: de.json  en.json  es.json  it.json  ja.json  pl.json  zh_CN.json
wayvr/src/backend/: input.rs  mod.rs  task.rs
wayvr/src/backend/openvr/: input.rs  playspace.rs
wayvr/src/backend/openxr/: blocker.rs  helpers.rs  input.rs  mod.rs  monado_state.rs  openxr_actions.json5  overlay.rs  playspace.rs  skybox.rs
wayvr/src/backend/wayvr/: client.rs  comp.rs  handle.rs  mod.rs  process.rs
wayvr/src/graphics/: dmabuf.rs  mod.rs
wayvr/src/gui/panel/: button.rs  device_list.rs  label.rs  mod.rs  overlay_list.rs  set_list.rs
wayvr/src/ipc/: events.rs  ipc_server.rs  signal.rs
wayvr/src/overlays/: custom.rs  dashboard.rs  toast.rs  watch.rs  wayvr.rs
wayvr/src/overlays/edit/: lock.rs  mod.rs  sprite_tab.rs  stereo.rs
wayvr/src/overlays/keyboard/: builder.rs  layout.rs  mod.rs  swipe_type.rs
wayvr/src/overlays/screen/: backend.rs  capture.rs  pw.rs
wayvr/src/res/: config.yaml
wayvr/src/shaders/: grid.frag  mod.rs  sky.frag
wayvr/src/subsystem/: input.rs  mod.rs
wayvr/src/subsystem/dbus/: fcitx5.rs  mod.rs  notifications.rs
wayvr/src/subsystem/hid/: mod.rs
wayvr/src/subsystem/monado_metrics/: README.md  metrics_fd.rs  mod.rs  proto.rs
wayvr/src/windowing/: backend.rs  manager.rs
wayvrctl/src/: helper.rs  main.rs
wgui/: Cargo.toml  README.md
wgui/doc/: widgets.md
wgui/src/: animation.rs  drawing.rs  event.rs  globals.rs  i18n.rs  layout.rs  lib.rs  log.rs  task.rs  theme.rs
wgui/src/components/: bar_graph.rs  button.rs  checkbox.rs  color_selector.rs  editbox.rs  mod.rs  slider.rs  tabs.rs  tooltip.rs
wgui/src/gfx/: pass.rs  pipeline.rs
wgui/src/parser/: component_bar_graph.rs  component_button.rs  component_checkbox.rs  mod.rs  widget_image.rs  widget_label.rs  widget_rectangle.rs  widget_sprite.rs
wgui/src/renderer_vk/: image.rs
wgui/src/renderer_vk/text/: custom_glyph.rs  text_atlas.rs
wgui/src/widget/: custom_draw.rs  image.rs  label.rs  mod.rs  sprite.rs
wgui/src/windowing/: context_menu.rs  window.rs
wlx-capture/: Cargo.toml
wlx-common/: Cargo.toml
wlx-common/src/: audio.rs  config.rs  config_io.rs  dash_interface.rs  dash_interface_emulated.rs  desktop_finder.rs  lib.rs  locale.rs  overlays.rs
